@@ -102,20 +102,29 @@ CPlayList::~CPlayList(void)
 void CPlayList::Add(CPlayListItem& item)
 {
   // set the order identifier to the size of the vector
+  CLog::Log(LOGDEBUG,"CPlayList::Add, item: %s. WasPlayed: %s. IsUnPlayable: %s",
+      item.m_strPath.c_str(), item.WasPlayed() ? "true" : "false", item.IsUnPlayable() ? "true" : "false");
+
   item.m_iOrder = m_vecItems.size();
   m_vecItems.push_back(item);
 
   // increment the unplayed song count
-  if (m_iUnplayedItems < 0)
-    m_iUnplayedItems = 1;
-  else
-    m_iUnplayedItems++;
+  if (!item.WasPlayed())
+  {
+    if (m_iUnplayedItems < 0)
+      m_iUnplayedItems = 1;
+    else
+      m_iUnplayedItems++;
+  }
 
   // increment the playable counter
-  if (m_iPlayableItems < 0)
-    m_iPlayableItems = 1;
-  else
-    m_iPlayableItems++;
+  if (!item.IsUnPlayable())
+  {
+    if (m_iPlayableItems < 0)
+      m_iPlayableItems = 1;
+    else
+      m_iPlayableItems++;
+  }
 }
 
 void CPlayList::Clear()
